fix: mdx font color change because of dark mode

--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -1,9 +1,3 @@
-.mdx p,
-.mdx li,
-.mdx strong {
-  color: black;
-}
-
 .mdx > * {
   margin-bottom: 1.75rem;
 }
